--- a/output.css
+++ b/output.css
@@ -9,12 +9,19 @@
       "Courier New", monospace;
     --color-white: #fff;
     --spacing: 0.25rem;
+    --container-5xl: 64rem;
+    --text-sm: 0.875rem;
+    --text-sm--line-height: calc(1.25 / 0.875);
+    --text-base: 1rem;
+    --text-base--line-height: calc(1.5 / 1);
     --text-lg: 1.125rem;
     --text-lg--line-height: calc(1.75 / 1.125);
     --text-xl: 1.25rem;
     --text-xl--line-height: calc(1.75 / 1.25);
     --text-2xl: 1.5rem;
     --text-2xl--line-height: calc(2 / 1.5);
+    --text-5xl: 3rem;
+    --text-5xl--line-height: 1;
     --font-weight-medium: 500;
     --radius-xl: 0.75rem;
     --radius-3xl: 1.5rem;
@@ -283,6 +290,9 @@
   .grid {
     display: grid;
   }
+  .hidden {
+    display: none;
+  }
   .table {
     display: table;
   }
@@ -485,6 +495,10 @@
     border-top-right-radius: var(--radius-xl) !important;
     border-bottom-right-radius: var(--radius-xl) !important;
   }
+  .rounded-b-4xl {
+    border-bottom-right-radius: var(--radius-4xl);
+    border-bottom-left-radius: var(--radius-4xl);
+  }
   .rounded-b-\[3\.5rem\] {
     border-bottom-right-radius: 3.5rem;
     border-bottom-left-radius: 3.5rem;
@@ -492,10 +506,6 @@
   .rounded-b-\[25px\] {
     border-bottom-right-radius: 25px;
     border-bottom-left-radius: 25px;
-  }
-  .rounded-b-\[32px\] {
-    border-bottom-right-radius: 32px;
-    border-bottom-left-radius: 32px;
   }
   .border {
     border-style: var(--tw-border-style);
@@ -659,9 +669,262 @@
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
   }
-  .max-\[1440px\]\:max-w-\[1024px\] {
+  .max-\[1440px\]\:-right-5 {
     @media (width < 1440px) {
-      max-width: 1024px;
+      right: calc(var(--spacing) * -5);
+    }
+  }
+  .max-\[1440px\]\:-right-10 {
+    @media (width < 1440px) {
+      right: calc(var(--spacing) * -10);
+    }
+  }
+  .max-\[1440px\]\:-right-15 {
+    @media (width < 1440px) {
+      right: calc(var(--spacing) * -15);
+    }
+  }
+  .max-\[1440px\]\:-right-18 {
+    @media (width < 1440px) {
+      right: calc(var(--spacing) * -18);
+    }
+  }
+  .max-\[1440px\]\:-right-20 {
+    @media (width < 1440px) {
+      right: calc(var(--spacing) * -20);
+    }
+  }
+  .max-\[1440px\]\:right-1 {
+    @media (width < 1440px) {
+      right: calc(var(--spacing) * 1);
+    }
+  }
+  .max-\[1440px\]\:m-10 {
+    @media (width < 1440px) {
+      margin: calc(var(--spacing) * 10);
+    }
+  }
+  .max-\[1440px\]\:mt-20 {
+    @media (width < 1440px) {
+      margin-top: calc(var(--spacing) * 20);
+    }
+  }
+  .max-\[1440px\]\:mb-10 {
+    @media (width < 1440px) {
+      margin-bottom: calc(var(--spacing) * 10);
+    }
+  }
+  .max-\[1440px\]\:mb-20 {
+    @media (width < 1440px) {
+      margin-bottom: calc(var(--spacing) * 20);
+    }
+  }
+  .max-\[1440px\]\:block {
+    @media (width < 1440px) {
+      display: block;
+    }
+  }
+  .max-\[1440px\]\:hidden {
+    @media (width < 1440px) {
+      display: none;
+    }
+  }
+  .max-\[1440px\]\:h-6 {
+    @media (width < 1440px) {
+      height: calc(var(--spacing) * 6);
+    }
+  }
+  .max-\[1440px\]\:h-13 {
+    @media (width < 1440px) {
+      height: calc(var(--spacing) * 13);
+    }
+  }
+  .max-\[1440px\]\:h-50 {
+    @media (width < 1440px) {
+      height: calc(var(--spacing) * 50);
+    }
+  }
+  .max-\[1440px\]\:h-60 {
+    @media (width < 1440px) {
+      height: calc(var(--spacing) * 60);
+    }
+  }
+  .max-\[1440px\]\:h-70 {
+    @media (width < 1440px) {
+      height: calc(var(--spacing) * 70);
+    }
+  }
+  .max-\[1440px\]\:h-80 {
+    @media (width < 1440px) {
+      height: calc(var(--spacing) * 80);
+    }
+  }
+  .max-\[1440px\]\:h-90 {
+    @media (width < 1440px) {
+      height: calc(var(--spacing) * 90);
+    }
+  }
+  .max-\[1440px\]\:h-110 {
+    @media (width < 1440px) {
+      height: calc(var(--spacing) * 110);
+    }
+  }
+  .max-\[1440px\]\:w-6 {
+    @media (width < 1440px) {
+      width: calc(var(--spacing) * 6);
+    }
+  }
+  .max-\[1440px\]\:w-59\.5 {
+    @media (width < 1440px) {
+      width: calc(var(--spacing) * 59.5);
+    }
+  }
+  .max-\[1440px\]\:w-60 {
+    @media (width < 1440px) {
+      width: calc(var(--spacing) * 60);
+    }
+  }
+  .max-\[1440px\]\:w-70 {
+    @media (width < 1440px) {
+      width: calc(var(--spacing) * 70);
+    }
+  }
+  .max-\[1440px\]\:w-90 {
+    @media (width < 1440px) {
+      width: calc(var(--spacing) * 90);
+    }
+  }
+  .max-\[1440px\]\:w-100 {
+    @media (width < 1440px) {
+      width: calc(var(--spacing) * 100);
+    }
+  }
+  .max-\[1440px\]\:w-110 {
+    @media (width < 1440px) {
+      width: calc(var(--spacing) * 110);
+    }
+  }
+  .max-\[1440px\]\:w-120 {
+    @media (width < 1440px) {
+      width: calc(var(--spacing) * 120);
+    }
+  }
+  .max-\[1440px\]\:max-w-5xl {
+    @media (width < 1440px) {
+      max-width: var(--container-5xl);
+    }
+  }
+  .max-\[1440px\]\:items-start {
+    @media (width < 1440px) {
+      align-items: flex-start;
+    }
+  }
+  .max-\[1440px\]\:object-cover {
+    @media (width < 1440px) {
+      object-fit: cover;
+    }
+  }
+  .max-\[1440px\]\:p-6 {
+    @media (width < 1440px) {
+      padding: calc(var(--spacing) * 6);
+    }
+  }
+  .max-\[1440px\]\:p-10 {
+    @media (width < 1440px) {
+      padding: calc(var(--spacing) * 10);
+    }
+  }
+  .max-\[1440px\]\:px-10 {
+    @media (width < 1440px) {
+      padding-inline: calc(var(--spacing) * 10);
+    }
+  }
+  .max-\[1440px\]\:py-6 {
+    @media (width < 1440px) {
+      padding-block: calc(var(--spacing) * 6);
+    }
+  }
+  .max-\[1440px\]\:pt-6 {
+    @media (width < 1440px) {
+      padding-top: calc(var(--spacing) * 6);
+    }
+  }
+  .max-\[1440px\]\:pt-10 {
+    @media (width < 1440px) {
+      padding-top: calc(var(--spacing) * 10);
+    }
+  }
+  .max-\[1440px\]\:pt-20 {
+    @media (width < 1440px) {
+      padding-top: calc(var(--spacing) * 20);
+    }
+  }
+  .max-\[1440px\]\:pt-22 {
+    @media (width < 1440px) {
+      padding-top: calc(var(--spacing) * 22);
+    }
+  }
+  .max-\[1440px\]\:pt-22\.5 {
+    @media (width < 1440px) {
+      padding-top: calc(var(--spacing) * 22.5);
+    }
+  }
+  .max-\[1440px\]\:pb-12 {
+    @media (width < 1440px) {
+      padding-bottom: calc(var(--spacing) * 12);
+    }
+  }
+  .max-\[1440px\]\:pl-10 {
+    @media (width < 1440px) {
+      padding-left: calc(var(--spacing) * 10);
+    }
+  }
+  .max-\[1440px\]\:text-2xl {
+    @media (width < 1440px) {
+      font-size: var(--text-2xl);
+      line-height: var(--tw-leading, var(--text-2xl--line-height));
+    }
+  }
+  .max-\[1440px\]\:text-5xl {
+    @media (width < 1440px) {
+      font-size: var(--text-5xl);
+      line-height: var(--tw-leading, var(--text-5xl--line-height));
+    }
+  }
+  .max-\[1440px\]\:text-base {
+    @media (width < 1440px) {
+      font-size: var(--text-base);
+      line-height: var(--tw-leading, var(--text-base--line-height));
+    }
+  }
+  .max-\[1440px\]\:text-sm {
+    @media (width < 1440px) {
+      font-size: var(--text-sm);
+      line-height: var(--tw-leading, var(--text-sm--line-height));
+    }
+  }
+  .max-\[1440px\]\:text-xl {
+    @media (width < 1440px) {
+      font-size: var(--text-xl);
+      line-height: var(--tw-leading, var(--text-xl--line-height));
+    }
+  }
+  .max-\[1440px\]\:leading-4\.5 {
+    @media (width < 1440px) {
+      --tw-leading: calc(var(--spacing) * 4.5);
+      line-height: calc(var(--spacing) * 4.5);
+    }
+  }
+  .max-\[1440px\]\:leading-7 {
+    @media (width < 1440px) {
+      --tw-leading: calc(var(--spacing) * 7);
+      line-height: calc(var(--spacing) * 7);
+    }
+  }
+  .max-\[1440px\]\:leading-8 {
+    @media (width < 1440px) {
+      --tw-leading: calc(var(--spacing) * 8);
+      line-height: calc(var(--spacing) * 8);
     }
   }
 }
@@ -671,6 +934,14 @@
   }
   .about_line {
     height: 28.2rem;
+  }
+}
+@media (max-width: 1440px) {
+  button {
+    font-size: medium;
+  }
+  .about_line {
+    display: none;
   }
 }
 button {
@@ -700,12 +971,19 @@ button {
   font-size: 3.5rem;
   letter-spacing: -3%;
   line-height: 3.75rem;
+  @media (max-width: 1440px) {
+    font-size: 3rem;
+    line-height: 100%;
+  }
 }
 .about_company_wrap {
   padding: 2rem;
   border-radius: 12px 32px 32px 12px;
   background: #f2f5f7;
   flex: 1;
+  @media (max-width: 1440px) {
+    padding: 1rem;
+  }
 }
 .about_icon_wrap {
   width: 4.5rem;
@@ -716,8 +994,10 @@ button {
   align-items: center;
   background-color: #c83a36;
   margin-bottom: 5rem;
-  @media (max-width: 1920px) and (min-width: 1440px) {
+  @media (max-width: 1440px) {
     margin-bottom: 3rem;
+    width: 3rem;
+    height: 3rem;
   }
 }
 .about_title {
@@ -727,8 +1007,13 @@ button {
   color: #3a3a3a;
   margin-bottom: 1rem;
   letter-spacing: -3%;
-  @media (max-width: 1920px) and (min-width: 1440px) {
+  @media (max-width: 1920px) {
+    font-size: 4rem;
+    margin-bottom: 0.5rem;
+  }
+  @media (max-width: 1440px) {
     font-size: 3rem;
+    margin-bottom: 0.5rem;
   }
 }
 .about_info {
@@ -736,6 +1021,10 @@ button {
   color: #3a3a3a;
   font-size: 1.25rem;
   line-height: 1.75rem;
+  @media (max-width: 1920px) {
+    font-size: small;
+    line-height: 1rem;
+  }
 }
 .input_form {
   width: 100%;
