--- a/style.css
+++ b/style.css
@@ -9,6 +9,15 @@
   }
 }
 
+@media (max-width: 1440px) {
+  button {
+    font-size: medium;
+  }
+  .about_line {
+    display: none;
+  }
+}
+
 button {
   cursor: pointer;
 }
@@ -40,6 +49,10 @@ button {
   font-size: 3.5rem;
   letter-spacing: -3%;
   line-height: 3.75rem;
+  @media (max-width: 1440px) {
+    font-size: 3rem;
+    line-height: 100%;
+  }
 }
 
 .about_company_wrap {
@@ -47,6 +60,9 @@ button {
   border-radius: 12px 32px 32px 12px;
   background: #f2f5f7;
   flex: 1;
+  @media (max-width: 1440px) {
+    padding: 1rem;
+  }
 }
 
 .about_icon_wrap {
@@ -58,8 +74,11 @@ button {
   align-items: center;
   background-color: #c83a36;
   margin-bottom: 5rem;
-  @media (max-width: 1920px) and (min-width: 1440px) {
+
+  @media (max-width: 1440px) {
     margin-bottom: 3rem;
+    width: 3rem;
+    height: 3rem;
   }
 }
 
@@ -70,8 +89,13 @@ button {
   color: #3a3a3a;
   margin-bottom: 1rem;
   letter-spacing: -3%;
-  @media (max-width: 1920px) and (min-width: 1440px) {
+  @media (max-width: 1920px) {
+    font-size: 4rem;
+    margin-bottom: 0.5rem;
+  }
+  @media (max-width: 1440px) {
     font-size: 3rem;
+    margin-bottom: 0.5rem;
   }
 }
 
@@ -80,6 +104,10 @@ button {
   color: #3a3a3a;
   font-size: 1.25rem;
   line-height: 1.75rem;
+  @media (max-width: 1920px) {
+    font-size: small;
+    line-height: 1rem;
+  }
 }
 
 .input_form {
