--- a/style.css
+++ b/style.css
@@ -1,5 +1,41 @@
 @import "tailwindcss";
 
+@font-face {
+  font-family: "TTFirstNeue";
+  src: url("./fonts/TTFirsNeue-Regular.ttf");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "TTFirstNeue";
+  src: url("./fonts/TTFirsNeueTrialBold.ttf");
+  font-weight: 700;
+  font-style: normal;
+}
+@font-face {
+  font-family: "TTFirstNeue";
+  src: url("./fonts/TTFirsNeueTrialDemiBold.ttf");
+  font-weight: 600;
+  font-style: normal;
+}
+@font-face {
+  font-family: "TTFirstNeue";
+  src: url("./fonts/TTFirsNeueTrialMedium.ttf");
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: "TTFirstNeue";
+  src: url("./fonts/TTFirsNeueTrialLight.ttf");
+  font-weight: 300;
+  font-style: normal;
+}
+
+body {
+  font-family: "TTFirstNeue", sans-serif;
+}
+
 @media (max-width: 1920px) and (min-width: 1440px) {
   html {
     font-size: 14px;
@@ -11,7 +47,7 @@
 
 @media (max-width: 1440px) {
   button {
-    font-size: medium;
+    font-size: 500;
   }
   .about_line {
     display: none;
@@ -45,7 +81,7 @@ button {
 
 .title {
   color: #3a3a3a;
-  font-weight: medium;
+  font-weight: 500;
   font-size: 3.5rem;
   letter-spacing: -3%;
   line-height: 3.75rem;
@@ -57,11 +93,11 @@ button {
 
 .about_company_wrap {
   padding: 2rem;
-  border-radius: 12px 32px 32px 12px;
   background: #f2f5f7;
   flex: 1;
   @media (max-width: 1440px) {
     padding: 1rem;
+    border-radius: 12px !important;
   }
 }
 
@@ -74,16 +110,22 @@ button {
   align-items: center;
   background-color: #c83a36;
   margin-bottom: 5rem;
+  flex-shrink: 0;
 
   @media (max-width: 1440px) {
     margin-bottom: 3rem;
     width: 3rem;
     height: 3rem;
   }
+  @media (max-width: 768px) {
+    margin-bottom: 0.5rem !important;
+    width: 1.5rem;
+    height: 1.5rem;
+  }
 }
 
 .about_title {
-  font-weight: medium;
+  font-weight: 500;
   font-size: 5rem;
   line-height: 100%;
   color: #3a3a3a;
@@ -96,6 +138,10 @@ button {
   @media (max-width: 1440px) {
     font-size: 3rem;
     margin-bottom: 0.5rem;
+  }
+  @media (max-width: 768px) {
+    font-size: 1.5rem !important;
+    margin-bottom: 0.75rem;
   }
 }
 
@@ -138,6 +184,11 @@ button {
   background-position: center 60%;
   background-repeat: no-repeat;
   z-index: 1;
+  @media (max-width: 1440px) {
+    background-position: 0% 20%;
+    width: 185%;
+    height: 185%;
+  }
 }
 
 .footer_section {
@@ -148,16 +199,32 @@ button {
 .footer_section::before {
   content: "";
   position: absolute;
-  top: 0px; /* начинается выше секции */
+  top: 0px;
   right: -0px;
-  width: 90%; /* шире чем контейнер */
-  height: 100%; /* выше чем контейнер */
+  width: 90%;
+  height: 100%;
   background-image: url("./assets/icons/footerLine.svg");
   background-size: 100% auto;
-  background-position: top right; /* привязка к верхнему правому углу */
+  background-position: top right;
   background-repeat: no-repeat;
-
-  z-index: 1;
+  @media (max-width: 1440px) {
+    width: 180%;
+    height: 180%;
+    background-size: 100% auto;
+    top: -50px;
+    right: -650px;
+    background-position: top right;
+  }
+  @media (max-width: 1024px) {
+    width: 250%;
+    height: 250%;
+    background-size: contain;
+    top: -600px;
+    right: -600px;
+    background-position: center center;
+    transform: rotate(30deg);
+    transform-origin: center center;
+  }
 }
 
 .footer_icon_wrap {
@@ -168,4 +235,113 @@ button {
   justify-content: center;
   align-items: center;
   background: #ffffff29;
+  @media (max-width: 1440px) {
+    background-color: #4d4d4d;
+  }
+}
+
+.radius_left {
+  border-radius: 12px 32px 32px 12px;
+}
+
+.radius_right {
+  border-radius: 32px 12px 12px 32px;
+}
+
+.radius_full {
+  border-radius: 32px;
+}
+
+@media (max-width: 1440px) {
+  .input_form {
+    height: 3.25rem;
+    font-size: 0.875rem;
+    padding-left: 1rem;
+  }
+  .radius_left {
+    border-radius: 12px 24px 24px 12px;
+  }
+  .radius_right {
+    border-radius: 24px 12px 12px 24px;
+  }
+  .radius_full {
+    border-radius: 24px;
+  }
+  .radius_comment_left {
+    border-radius: 12px 24px 24px 12px !important;
+  }
+  .radius_comment_right {
+    border-radius: 24px 12px 12px 24px !important;
+  }
+}
+
+@media (max-width: 1024px) {
+  .title {
+    font-size: 2rem;
+  }
+  .about_title {
+    font-size: 2.25rem;
+  }
+  .about_info {
+    font-size: 0.75rem;
+  }
+  .about_company_wrap {
+    padding-right: 0;
+    border-radius: 12px !important;
+  }
+  .about_icon_wrap {
+    margin-bottom: 2.8rem;
+  }
+  .radius_servie2 {
+    border-radius: 24px 12px 12px 24px !important;
+  }
+  .radius_servie3 {
+    border-radius: 12px 24px 24px 12px !important;
+  }
+  .radius_servie4 {
+    border-radius: 24px 12px 12px 24px !important;
+  }
+  .radius_servie5 {
+    border-radius: 24px !important;
+  }
+}
+
+@media (max-width: 768px) {
+  .about_info {
+    font-size: 0.75rem;
+  }
+  .about_company_wrap {
+    padding-right: 0;
+    border-radius: 12px !important;
+  }
+  .radius_servie2 {
+    border-radius: 12px !important;
+  }
+  .radius_servie3 {
+    border-radius: 12px !important;
+  }
+  .radius_servie4 {
+    border-radius: 12px !important;
+  }
+  .radius_servie5 {
+    border-radius: 12px !important;
+  }
+  .radius_left {
+    border-radius: 12px;
+  }
+  .radius_right {
+    border-radius: 12px;
+  }
+  .radius_full {
+    border-radius: 12px;
+  }
+  .radius_comment_left {
+    border-radius: 12px;
+  }
+  .radius_comment_right {
+    border-radius: 12px;
+  }
+  button {
+    font-size: small;
+  }
 }
