--- a/output.css
+++ b/output.css
@@ -195,17 +195,11 @@
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
-  .top-full {
-    top: 100%;
-  }
   .right-0 {
     right: calc(var(--spacing) * 0);
   }
   .bottom-0 {
     bottom: calc(var(--spacing) * 0);
-  }
-  .left-0 {
-    left: calc(var(--spacing) * 0);
   }
   .-z-10 {
     z-index: calc(10 * -1);
@@ -215,9 +209,6 @@
   }
   .z-20 {
     z-index: 20;
-  }
-  .z-50 {
-    z-index: 50;
   }
   .z-100 {
     z-index: 100;
@@ -312,9 +303,6 @@
   .mb-46 {
     margin-bottom: calc(var(--spacing) * 46);
   }
-  .block {
-    display: block;
-  }
   .flex {
     display: flex;
   }
@@ -324,11 +312,11 @@
   .hidden {
     display: none;
   }
+  .hidden\! {
+    display: none !important;
+  }
   .table {
     display: table;
-  }
-  .h-6 {
-    height: calc(var(--spacing) * 6);
   }
   .h-8 {
     height: calc(var(--spacing) * 8);
@@ -489,9 +477,6 @@
   .transform {
     transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
   }
-  .cursor-pointer {
-    cursor: pointer;
-  }
   .resize {
     resize: both;
   }
@@ -525,9 +510,6 @@
   .gap-3 {
     gap: calc(var(--spacing) * 3);
   }
-  .gap-4 {
-    gap: calc(var(--spacing) * 4);
-  }
   .gap-6 {
     gap: calc(var(--spacing) * 6);
   }
@@ -536,9 +518,6 @@
   }
   .overflow-hidden {
     overflow: hidden;
-  }
-  .rounded {
-    border-radius: 0.25rem;
   }
   .rounded-3xl {
     border-radius: var(--radius-3xl);
@@ -616,26 +595,14 @@
   .p-40 {
     padding: calc(var(--spacing) * 40);
   }
-  .px-4 {
-    padding-inline: calc(var(--spacing) * 4);
-  }
   .px-5 {
     padding-inline: calc(var(--spacing) * 5);
-  }
-  .px-6 {
-    padding-inline: calc(var(--spacing) * 6);
   }
   .px-10 {
     padding-inline: calc(var(--spacing) * 10);
   }
   .px-15 {
     padding-inline: calc(var(--spacing) * 15);
-  }
-  .py-2 {
-    padding-block: calc(var(--spacing) * 2);
-  }
-  .py-4 {
-    padding-block: calc(var(--spacing) * 4);
   }
   .py-6 {
     padding-block: calc(var(--spacing) * 6);
@@ -660,6 +627,15 @@
   }
   .pt-15 {
     padding-top: calc(var(--spacing) * 15);
+  }
+  .pt-22 {
+    padding-top: calc(var(--spacing) * 22);
+  }
+  .pt-22\.5 {
+    padding-top: calc(var(--spacing) * 22.5);
+  }
+  .pt-25 {
+    padding-top: calc(var(--spacing) * 25);
   }
   .pt-40 {
     padding-top: calc(var(--spacing) * 40);
@@ -746,10 +722,6 @@
   .leading-\[100\%\] {
     --tw-leading: 100%;
     line-height: 100%;
-  }
-  .font-bold {
-    --tw-font-weight: var(--font-weight-bold);
-    font-weight: var(--font-weight-bold);
   }
   .font-medium {
     --tw-font-weight: var(--font-weight-medium);
@@ -850,6 +822,11 @@
   .max-\[1440px\]\:block {
     @media (width < 1440px) {
       display: block;
+    }
+  }
+  .max-\[1440px\]\:flex\! {
+    @media (width < 1440px) {
+      display: flex !important;
     }
   }
   .max-\[1440px\]\:hidden {
@@ -1076,6 +1053,11 @@
   .max-\[1440px\]\:pt-22\.5 {
     @media (width < 1440px) {
       padding-top: calc(var(--spacing) * 22.5);
+    }
+  }
+  .max-\[1440px\]\:pt-32\.5 {
+    @media (width < 1440px) {
+      padding-top: calc(var(--spacing) * 32.5);
     }
   }
   .max-\[1440px\]\:pb-12 {
@@ -1869,21 +1851,6 @@
   .min-\[1440px\]\:flex-1 {
     @media (width >= 1440px) {
       flex: 1;
-    }
-  }
-  .md\:block {
-    @media (width >= 48rem) {
-      display: block;
-    }
-  }
-  .md\:flex {
-    @media (width >= 48rem) {
-      display: flex;
-    }
-  }
-  .md\:hidden {
-    @media (width >= 48rem) {
-      display: none;
     }
   }
 }
