--- a/style.css
+++ b/style.css
@@ -429,3 +429,57 @@ button {
   overflow: hidden;
   height: 100vh;
 }
+
+@media (max-width: 768px) {
+  .slide-bg {
+    border-bottom-left-radius: 1.5rem;
+    border-bottom-right-radius: 1.5rem;
+  }
+}
+
+.slider-container {
+  position: relative;
+  width: 100%;
+}
+
+.dot {
+  transition: all 0.3s;
+}
+
+.dot.active {
+  width: 2.5rem;
+  border-radius: 0.375rem;
+}
+
+.swiper-pagination-bullet {
+  width: 30px !important;
+  height: 4px !important;
+  background: #ffffff99 !important; /* неактивная */
+  opacity: 1 !important;
+  margin: 0px !important;
+  border-radius: 10px !important;
+  transition: all 0.3s, transform 0.3s !important;
+}
+
+.swiper-pagination-bullet-active {
+  background: #ffffff !important; /* активная */
+  width: 80px !important;
+  height: 4px !important;
+}
+
+.mySwiper .swiper-pagination {
+  position: absolute;
+  bottom: 25px;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  background: #ffffff33; /* ← вот твой фон */
+  padding: 16px 24px;
+  border-radius: 20px;
+  backdrop-filter: blur(24px);
+  width: auto !important;
+  left: 50%;
+  transform: translateX(-50%);
+  gap: 8px;
+}
