--- a/output.css
+++ b/output.css
@@ -530,6 +530,9 @@
   .max-w-\[70\%\] {
     max-width: 70%;
   }
+  .max-w-\[793px\] {
+    max-width: 793px;
+  }
   .max-w-\[1920px\] {
     max-width: 1920px;
   }
@@ -613,6 +616,9 @@
   }
   .gap-16\.5 {
     gap: calc(var(--spacing) * 16.5);
+  }
+  .gap-47 {
+    gap: calc(var(--spacing) * 47);
   }
   .gap-x-6 {
     column-gap: calc(var(--spacing) * 6);
@@ -767,6 +773,9 @@
   }
   .py-12 {
     padding-block: calc(var(--spacing) * 12);
+  }
+  .py-30 {
+    padding-block: calc(var(--spacing) * 30);
   }
   .py-40 {
     padding-block: calc(var(--spacing) * 40);
@@ -1292,6 +1301,11 @@
       max-width: calc(var(--spacing) * 170);
     }
   }
+  .max-\[1440px\]\:max-w-\[431px\] {
+    @media (width < 1440px) {
+      max-width: 431px;
+    }
+  }
   .max-\[1440px\]\:max-w-md {
     @media (width < 1440px) {
       max-width: var(--container-md);
@@ -1380,6 +1394,11 @@
       padding: calc(var(--spacing) * 10);
     }
   }
+  .max-\[1440px\]\:px-5 {
+    @media (width < 1440px) {
+      padding-inline: calc(var(--spacing) * 5);
+    }
+  }
   .max-\[1440px\]\:px-10 {
     @media (width < 1440px) {
       padding-inline: calc(var(--spacing) * 10);
@@ -1403,6 +1422,11 @@
   .max-\[1440px\]\:py-14 {
     @media (width < 1440px) {
       padding-block: calc(var(--spacing) * 14);
+    }
+  }
+  .max-\[1440px\]\:py-25 {
+    @media (width < 1440px) {
+      padding-block: calc(var(--spacing) * 25);
     }
   }
   .max-\[1440px\]\:pt-13\.5 {
@@ -1723,6 +1747,11 @@
   .max-\[1024px\]\:max-w-\[50\%\] {
     @media (width < 1024px) {
       max-width: 50%;
+    }
+  }
+  .max-\[1024px\]\:max-w-\[550px\] {
+    @media (width < 1024px) {
+      max-width: 550px;
     }
   }
   .max-\[1024px\]\:max-w-full {
@@ -2357,6 +2386,11 @@
   .max-\[768px\]\:py-5 {
     @media (width < 768px) {
       padding-block: calc(var(--spacing) * 5);
+    }
+  }
+  .max-\[768px\]\:py-10 {
+    @media (width < 768px) {
+      padding-block: calc(var(--spacing) * 10);
     }
   }
   .max-\[768px\]\:pt-3 {
